--- a/3D_Engine/3D_Engine/3D_Engine.vcxproj.filters
+++ b/3D_Engine/3D_Engine/3D_Engine.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="textureshaderclass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Reflectionshaderclass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cameraclass.h">
@@ -158,6 +161,9 @@
     <ClInclude Include="textureshaderclass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Reflectionshaderclass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Sphere.vs">
@@ -182,6 +188,12 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="texture.vs">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="reflection.vs">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="reflection.ps">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
